# worker

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  README_8md_source.html  annotated.html  annotated_dup.js  appveyor.yml  archivate__task_8cpp_source.html  archivate__task_8h_source.html  archivator_8cpp_source.html  archivator_8h_source.html  broker__commands_8h_source.html  broker__connection_8h_source.html  cache__manager_8cpp_source.html  cache__manager_8h_source.html  classarchivate__task-members.html  classarchivate__task.html  classarchivate__task.js  classarchivator-members.html  classarchivator.html  classarchive__exception-members.html  classarchive__exception.html  classarchive__exception.js  classbroker__connection-members.html  classbroker__connection.html  classbroker__connection.js  classbroker__connection__context-members.html  classbroker__connection__context.html  classbroker__connection__context.js  classcache__manager-members.html  classcache__manager.html  classcache__manager.js  classcommand__context-members.html  classcommand__context.html  classcommand__context.js  classcommand__holder-members.html  (+351 more)
.github/workflows/: linux-build.yml  windows-build.yml
env/: C.yml  Python.yml
examples/: config.yml  job-config-hippoes.yml  job-config-hippoes.yml.1  job-config.yml  job-config.yml.2
install/: recodex-worker@.service  win-build.cmd
judges/: CMakeLists.txt
judges/codex_judge/: CMakeLists.txt  main.c  tokenize.c  tokenize.h  tokenize.txt
judges/filter/: CMakeLists.txt  io.c  io.h  main.c
judges/judge_passthrough/: CMakeLists.txt  main.cpp  recodex-data-only-wrapper.sh
judges/recodex_token_judge/: CMakeLists.txt  comparator.hpp  judge.hpp  reader.hpp  recodex-token-judge.cpp
judges/recodex_token_judge/bpplib/algo/: lcs.hpp
judges/recodex_token_judge/bpplib/cli/: args.hpp  logger.hpp
judges/recodex_token_judge/bpplib/misc/: exception.hpp  ptr_fix.hpp
judges/recodex_token_judge/bpplib/system/: filesystem.hpp  mmap_file.hpp
judges/recodex_token_judge/tests/: 01-basic-smoketest.bats  010.correct.in  010.result.in  02-emptylines.bats  02.error.out  02.result.in  020-emptylines.bats  03-ignore-eol.bats  03.error.out  03.result.in  031-ignore-eol-wrong.bats  031.correct.in  031.error.out  031.result.in  04-comments.bats  04.error.out  040.correct.in  040.result.in  05-numeric.bats  05.correct.in  05.error.out  05.result.in  050-numeric.bats  050.correct.in  06-caseinsensitive.bats  06.error.out  06.result.in  07.error.out  07.result.in  070-shuffled-tokens.bats  08-shuffled-output.bats  08.error.out  08.result.in  080.correct.in  09.error.out  09.result.in  090-shuffled-numeric.bats  090.correct.in  10-complex.bats  10.error.out  (+17 more)
judges/shuffled/: CMakeLists.txt  main.cpp  token.cpp  token.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  (+36 more)
src/: broker_connection.h  broker_connection.hpp  connection_proxy.h  eval_request.h  eval_response.h  isoeval_core.cpp  isoeval_core.h  job_callback.cpp  job_callback.h  job_evaluator.cpp  job_evaluator.h  job_receiver.cpp  job_receiver.h  main.cpp  worker_config.cpp  worker_config.hpp  worker_core.cpp  worker_core.h
src/archives/: archivator.cpp  archivator.h
src/commands/: broker_commands.h  broker_commands.h.orig  command_holder.h  jobs_client_commands.h  jobs_server_commands.h
src/config/: fileman_config.h  job_metadata.h  log_config.h  sandbox_config.h  sandbox_limits.h  task_metadata.h  task_results.h  worker_config.cpp  worker_config.h
src/fileman/: cache_manager.cpp  cache_manager.h  fallback_file_manager.cpp  fallback_file_manager.h  file_manager.cpp  file_manager.h  file_manager_base.h  file_manager_interface.h  http_manager.cpp  http_manager.cpp.orig  http_manager.h  prefixed_file_manager.cpp  prefixed_file_manager.h
src/helpers/: config.cpp  config.h  create_logger.h  filesystem.cpp  filesystem.h  format.h  logger.cpp  logger.h  string_utils.cpp  string_utils.h  topological_sort.cpp  topological_sort.h  type_utils.h  zmq_socket.cpp  zmq_socket.h
src/job/: job.cpp  job.h  job_evaluator.cpp  job_evaluator.h  job_evaluator_base.h  job_evaluator_interface.h  job_exception.h  job_receiver.cpp  job_receiver.h  progress_callback.cpp  progress_callback.h  progress_callback_base.h  progress_callback_interface.h
src/sandbox/: fake_sandbox.cpp  fake_sandbox.h  isolate_sandbox.cpp  isolate_sandbox.h  sandbox_base.h
src/tasks/: create_params.h  external_task.cpp  external_task.h  fake_task.cpp  fake_task.h  internal_task_base.h  job.cpp  job.h  job_metadata.cpp  job_metadata.h  job_tasks.cpp  job_tasks.h  root_task.cpp  root_task.h  task_base.cpp  task_base.h  task_factory.cpp  task_factory.h  task_factory_base.h  task_factory_interface.h
src/tasks/internal/: archivate_task.cpp  archivate_task.h  cp_task.cpp  cp_task.h  dump_dir_task.cpp  dump_dir_task.h  exists_task.cpp  exists_task.h  extract_task.cpp  extract_task.h  fetch_task.cpp  fetch_task.h  internal_task_base.h  mkdir_task.cpp  mkdir_task.h  rename_task.cpp  rename_task.h  rm_task.cpp  rm_task.h  truncate_task.cpp  truncate_task.h
tests/: CMakeLists.txt  archivator.cpp  broker_connection.cpp  build_job_metadata.cpp  cache_manager.cpp  dump_dir_task.cpp  exists_task.cpp  fallback_file_manager.cpp  file_manager.cpp  filesystem.cpp  http_manager.cpp  isolate_sandbox.cpp  job.cpp  job_config.cpp  job_receiver.cpp  mocks.h  progress_callback.cpp  string_utils.cpp  tasks.cpp  tests_main.cpp  topological_sort.cpp  truncate_task.cpp  worker_config.cpp
tests/testing_archives/: valid_tar.tar  valid_tar.tar.bz2
